Bug 1839226 - Fix for replying to selection of original plaintext messages which isn't format=flowed. r=babolivier

Inspired by https://github.com/Betterbird/thunderbird-patches/blob/main/115/bugs/1839226-fix-quoting-selection-non-flowed.patch

Differential Revision: https://phabricator.services.mozilla.com/D190571